Gracefully fail startup if useGrpcForSearch is specified on unsupported platforms

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Networking & Observability
    • Fully Compatible
    • ALL
    • Egress gRPC 2025-02-14
    • 1
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In mongod_main and mongos_main, lets fail to start with a clear message if a customer specifies useGrpcForSearch when the build flag MONGO_CONFIG_GRPC isn't enabled (ie, if we are on windows or mac).

            Assignee:
            Joseph Prince
            Reporter:
            Erin McNulty (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: