SERVER-100491 Gracefully fail startup if useGrpcForSearch is specified on unsupported platforms (#32136)

GitOrigin-RevId: 84dd9c0e8c5497627d6f0d356692abb856409831